--- a/dos33.html
+++ b/dos33.html
@@ -2277,7 +2277,7 @@ With that "legalese" out of the way ... enjoy the read!
                     129 ;
                     130 ; ENOMON - EXECUTE NO MONITOR CMD
                     131 ;
-                    132 <a class='f' name='ENOMON'   >ENOMON      </a>EQU *                                           ; <a class='v' href='#CMDETB'>CMDETB</a> [12]
+                    132 <a class='f' id='233D' name='ENOMON'>ENOMON      </a>EQU *                                           ; <a class='v' href='#CMDETB'>CMDETB</a> [12]
 
 223D:2C 74 2A       133             BIT <a  class='v' href='#IMBITS'>IMBITS</a>
 2240:               134             BVC <a  class='x' href='#ENM1'  >ENM1</a>
